# preferred-rest-api-model-deployment

./: .dockerignore  .gitignore  .profile.env  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.sh  training.sh
alembic/: env.py
financial_app/: settings.py
financial_app/api/: __main__.py
financial_app/api/routes/: model.py
financial_app/data/: request.py  response.py
financial_app/data/sql/: init.py  load.py  orm.py  session.py
financial_app/ml/: training.py
k8s/: GBDT-service.yaml  RidgeLog-service.yaml  app-claim0-persistentvolumeclaim.yaml  app-service.yaml  gbdt-deployment.yaml  model-tier-networkpolicy.yaml  prometheus-claim0-persistentvolumeclaim.yaml  prometheus-claim1-persistentvolumeclaim.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  promstats-configmap.yaml  promstats-deployment.yaml
k8s/app/: app-claim0-persistentvolume.yaml  app-claim0-persistentvolumeclaim.yaml  app-deployment.yaml  app-service.yaml
k8s/gbdt/: gbdt-deployment.yaml
k8s/lassolog/: LassoLog-service.yaml  lassolog-deployment.yaml
k8s/prometheus/: monitor-cluster-role-binding.yaml  monitor-cluster-role.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml
k8s/promstats/: promstats-configmap.yaml  promstats-deployment.yaml  promstats-service.yaml
k8s/ridgelog/: ridgelog-deployment.yaml
monitoring/prometheus/config/: prometheus.yml  statsd.yml
