[tool.poetry]
name = "financial-app"
version = "0.3.5"
description = ""
authors = ["Edward Turner <edward.turnerr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = { version = "^0.85.0", optional = true }
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
mlflow = {extras = ["extras"], version = "^1.29.0", optional = true}
scikit-learn = {version = "^1.1.2", optional = true}
pydantic = "^1.10.2"
scikit-optimize = {version = "^0.9.0", optional = true}
httpx = {version = "^0.23.0", optional = true}
uvicorn = {extras = ["standard"], version = "^0.18.3", optional = true}
starlette-exporter = { version = "^0.14.0", optional = true }
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
psycopg2-binary = "^2.9.5"
asyncpg = { version = "^0.27.0", optional = true }

[tool.poetry.extras]
serving = ["fastapi", "uvicorn", "httpx", "starlette-exporter", "gunicorn", "asyncpg"]
training = ["scikit-learn", "mlflow", "scikit-optimize"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
